# otto-old

./: .gitignore  .gitmodules  Cargo.toml  README.md  dodo.py  foo.yml  otto.yml  requirements.txt  setup.py
examples/: ex1.yml  ex2.yml  ex3.yml  ex4.yml
otto/: __init__.py  cli.py  constants.py  doit  exceptions.py  execute.py  load.py  parse.py  task.py  utils.py  version.py
src/: loader.rs  main.rs
src/cfg/: error.rs  loader.rs  mod.rs  spec.rs
src/cli/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  symbol.rs  token.rs
tests/: requirements.txt
