[package]
name = "otto"
version = "0.1.0"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lazy = "0.5.3"
anyhow = "1.0.32"
thiserror = "1.0.20"
#clap = { git = "https://github.com/clap-rs/clap/" }
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
serde_yaml = "0.8"
